<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/match_menu"
          android:enabled="true"
          android:title="Match"
          android:icon="@drawable/match"/>

    <item android:id="@+id/teams_menu"
          android:enabled="true"
          android:title="Teams"
          android:icon="@drawable/teams"/>

    <item android:id="@+id/favorite_menu"
          android:enabled="true"
          android:title="Favorite"
          android:icon="@drawable/favorite"/>

</menu>