...
                    android:textColor="@android:color/white"
                    android:text="@string/app_name"/>

        </LinearLayout>

        <android.support.design.widget.TabLayout
                android:id="@+id/tabsDetailTeam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabMode="fixed"
                app:tabGravity="fill">

        </android.support.design.widget.TabLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
            android:id="@+id/containerDetailTeam"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

</android.support.design.widget.CoordinatorLayout>
