<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent" android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".teams.detail.fragments.PlayersFragment">

        <android.support.v7.widget.RecyclerView
                android:id="@+id/list_player"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

    </FrameLayout>
</android.support.v4.widget.NestedScrollView>